@@ -19,6 +19,7 @@ xine-lib (1-rc4)
     http and file plugins
   * DXR3: fix menu highlight areas in letterboxed overlay mode with 
     pan&scan content
+  * DXR3: fix libavcodec encoder for frame widths not a multiple of 16
 
 xine-lib (1-rc3c)
   * fix the deadlock with non-seekable input plugins
